[gd_scene load_steps=11 format=3 uid="uid://h1ve46v4l7hx"]

[ext_resource type="Script" uid="uid://c4wcl1mjprj2x" path="res://scripts/bomb.gd" id="1_4kkau"]
[ext_resource type="Shader" uid="uid://cpt0gmkbh4e2l" path="res://shaders/bomb.gdshader" id="2_j15uc"]
[ext_resource type="Texture2D" uid="uid://b8phfgbhn31r4" path="res://sprites/bomb_icon.png" id="2_vpdcx"]
[ext_resource type="Texture2D" uid="uid://bv8tf3hw1swac" path="res://sprites/bomb_explosion_effect.png" id="4_84slv"]
[ext_resource type="Texture2D" uid="uid://d23l4r1cnqfdq" path="res://sprites/explosion_particle.png" id="5_nxi8k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_84slv"]
shader = ExtResource("2_j15uc")
shader_parameter/whiteness = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j15uc"]
radius = 16.0

[sub_resource type="Animation" id="Animation_nxi8k"]
resource_name = "explode"
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12601675, 0.26305225, 0.45518166, 0.644163, 0.88981223, 0.9969394),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_1hf1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56fam"]
_data = {
&"RESET": SubResource("Animation_1hf1o"),
&"explode": SubResource("Animation_nxi8k")
}

[node name="Bomb" type="Node2D"]
script = ExtResource("1_4kkau")

[node name="BombSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_84slv")
texture = ExtResource("2_vpdcx")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_j15uc")
debug_color = Color(0.820553, 0.40303648, 1.92523e-07, 0.41960785)

[node name="BoomTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_56fam")
}

[node name="explosion" type="Sprite2D" parent="."]
texture = ExtResource("4_84slv")
hframes = 7

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
texture = ExtResource("5_nxi8k")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 0.1
lifetime_randomness = 0.2
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 80.0
initial_velocity_max = 150.0
angular_velocity_min = -20.0
angular_velocity_max = 100.0
angle_min = -20.0
angle_max = 20.0

[connection signal="timeout" from="BoomTimer" to="." method="_on_boom_timer_timeout"]
